[workspace]
members = ["core", "cli", "py"]
resolver = "2"

[workspace.package]
authors = [
    "Micah Webb <micah.webb@nrel.gov>",
    "National Renewable Energy Laboratory (NREL)",
]
license = "BSD-3-Clause"
edition = "2021"

# Optional: Set the default member for cargo commands
default-members = ["cli"]

# Optional: Shared dependencies to ensure version consistency
[workspace.dependencies]
arrow = { version = "54.3.1", features = ["ipc", "pyarrow"] }
axum = "0.7.7"
bytes = "1.7.1"                                                     # This was missing
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5.1"
tower-http = "0.6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rayon = "1.10.0"
pyo3 = { version = "0.23.3", features = ["extension-module"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.0"
