[package]
name = "rtpa_cli"
version = "0.0.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Mock PDC server for IEEE C37.118 frame generation and testing."

[[bin]]
name = "rtpa"
path = "src/main.rs"

[dependencies]
# Reference the core library
rtpa_core = { path = "../core" }

# CLI-specific dependencies
axum = { workspace = true }
arrow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
