[package]
name = "rtpa_core"
version = "0.0.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Core utilities for IEEE C37.118 frame parsing and conversion to Arrow, developed by Micah Webb at NREL"

[lib]
name = "rtpa_core"
path = "src/lib.rs"

[dependencies]
# Use workspace dependencies
arrow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }


[dev-dependencies]
rtpa_cli = { path = "../cli" }
criterion = { workspace = true }
tokio = { workspace = true }


[[bench]]
name = "arrow_latency"
harness = false

[[bench]]
name = "accumulator_throughput"
harness = false
